@@ -1,7 +1,7 @@
 package com.magicworld.client;
 
 import com.mojang.logging.LogUtils;
-import net.neoforged.fml.loading.FMLPaths;
+import net.minecraftforge.fml.loading.FMLPaths;
 import org.slf4j.Logger;
 
 import java.io.IOException;
@@ -15,50 +15,26 @@ public final class MagicWorldClientCompat {
     private static final Logger LOGGER = LogUtils.getLogger();
     private static final String DH_CLIENT_HEADER = "[client]";
     private static final String DH_EXPERIMENTAL_GRAPHICS_HEADER = "[client.advanced.graphics.experimental]";
-    private static final String DH_OPTIONS_BUTTON = "showDhOptionsButtonInMinecraftUi";
-    private static final String DH_RENDERING_API = "renderingApi";
 
     private MagicWorldClientCompat() {
     }
 
     public static void prepareDistantHorizonsConfig() {
         Path configPath = FMLPaths.CONFIGDIR.get().resolve("DistantHorizons.toml");
-
         try {
             Files.createDirectories(configPath.getParent());
-
-            String config = Files.exists(configPath)
-                    ? Files.readString(configPath, StandardCharsets.UTF_8)
-                    : "";
-
-            String updatedConfig = forceDistantHorizonsClientOptions(config);
-            if (!updatedConfig.equals(config)) {
-                Files.writeString(configPath, updatedConfig, StandardCharsets.UTF_8);
-                LOGGER.info("Magic World prepared Distant Horizons client options for shader/menu compatibility.");
+            String config = Files.exists(configPath) ? Files.readString(configPath, StandardCharsets.UTF_8) : "";
+            String updated = forceConfigEntry(config, DH_CLIENT_HEADER,
+                    "showDhOptionsButtonInMinecraftUi", "false", "\t", false);
+            updated = forceConfigEntry(updated, DH_EXPERIMENTAL_GRAPHICS_HEADER,
+                    "renderingApi", "\"OPEN_GL\"", "\t\t\t\t", true);
+            if (!updated.equals(config)) {
+                Files.writeString(configPath, updated, StandardCharsets.UTF_8);
+                LOGGER.info("Magic World prepared Distant Horizons menu and rendering compatibility.");
             }
         } catch (IOException exception) {
             LOGGER.warn("Magic World could not prepare Distant Horizons configuration.", exception);
         }
-    }
-
-    private static String forceDistantHorizonsClientOptions(String config) {
-        String updatedConfig = forceConfigEntry(
-                config,
-                DH_CLIENT_HEADER,
-                DH_OPTIONS_BUTTON,
-                "false",
-                "\t",
-                false
-        );
-
-        return forceConfigEntry(
-                updatedConfig,
-                DH_EXPERIMENTAL_GRAPHICS_HEADER,
-                DH_RENDERING_API,
-                "\"OPEN_GL\"",
-                "\t\t\t\t",
-                true
-        );
     }
 
     private static String forceConfigEntry(
@@ -69,93 +45,74 @@ public final class MagicWorldClientCompat {
             String defaultIndent,
             boolean removeDuplicateSections
     ) {
-        String normalizedConfig = config == null ? "" : config;
-        String lineSeparator = System.lineSeparator();
-        String[] lines = normalizedConfig.isEmpty() ? new String[0] : normalizedConfig.split("\\R", -1);
-        List<String> updatedLines = new ArrayList<>();
-        boolean foundTargetSection = false;
-        boolean inTargetSection = false;
-        boolean skipDuplicateTargetSection = false;
+        String normalized = config == null ? "" : config;
+        String separator = System.lineSeparator();
+        String[] lines = normalized.isEmpty() ? new String[0] : normalized.split("\\R", -1);
+        List<String> updated = new ArrayList<>();
+        boolean foundSection = false;
+        boolean inSection = false;
+        boolean skipDuplicateSection = false;
         boolean wroteEntry = false;
         boolean changed = false;
 
         for (String line : lines) {
-            String trimmedLine = line.trim();
-            boolean isSectionHeader = trimmedLine.startsWith("[") && trimmedLine.endsWith("]");
-            boolean isTargetSection = sectionHeader.equals(trimmedLine);
+            String trimmed = line.trim();
+            boolean section = trimmed.startsWith("[") && trimmed.endsWith("]");
+            boolean targetSection = sectionHeader.equals(trimmed);
 
-            if (skipDuplicateTargetSection) {
-                if (!isSectionHeader) {
+            if (skipDuplicateSection) {
+                if (!section) {
                     changed = true;
                     continue;
                 }
-
-                skipDuplicateTargetSection = false;
+                skipDuplicateSection = false;
             }
 
-            if (isSectionHeader) {
-                if (inTargetSection && !wroteEntry) {
-                    updatedLines.add(configEntryLine(line, key, value, defaultIndent));
+            if (section) {
+                if (inSection && !wroteEntry) {
+                    updated.add(defaultIndent + key + " = " + value);
                     wroteEntry = true;
                     changed = true;
                 }
-
-                inTargetSection = false;
-
-                if (isTargetSection) {
-                    if (foundTargetSection && removeDuplicateSections) {
-                        skipDuplicateTargetSection = true;
+                inSection = false;
+                if (targetSection) {
+                    if (foundSection && removeDuplicateSections) {
+                        skipDuplicateSection = true;
                         changed = true;
                         continue;
                     }
-
-                    foundTargetSection = true;
-                    inTargetSection = true;
+                    foundSection = true;
+                    inSection = true;
                 }
             }
 
-            if (inTargetSection && isConfigEntryLine(trimmedLine, key)) {
-                String updatedLine = configEntryLine(line, key, value, defaultIndent);
-                updatedLines.add(updatedLine);
+            if (inSection && (trimmed.startsWith(key + " ") || trimmed.startsWith(key + "="))) {
+                String indent = line.replaceFirst("\\S.*$", "");
+                String replacement = (indent.isBlank() ? defaultIndent : indent) + key + " = " + value;
+                updated.add(replacement);
                 wroteEntry = true;
-                changed = changed || !updatedLine.equals(line);
+                changed = changed || !replacement.equals(line);
                 continue;
             }
-
-            updatedLines.add(line);
+            updated.add(line);
         }
 
-        if (inTargetSection && !wroteEntry) {
-            updatedLines.add(defaultIndent + key + " = " + value);
+        if (inSection && !wroteEntry) {
+            updated.add(defaultIndent + key + " = " + value);
             wroteEntry = true;
             changed = true;
         }
-
-        if (!foundTargetSection) {
-            if (!updatedLines.isEmpty() && !updatedLines.getLast().isBlank()) {
-                updatedLines.add("");
+        if (!foundSection) {
+            if (!updated.isEmpty() && !updated.get(updated.size() - 1).isBlank()) {
+                updated.add("");
             }
-
-            updatedLines.add(sectionHeader);
-            updatedLines.add(defaultIndent + key + " = " + value);
+            updated.add(sectionHeader);
+            updated.add(defaultIndent + key + " = " + value);
             wroteEntry = true;
             changed = true;
         }
 
-        String updatedConfig = String.join(lineSeparator, updatedLines).stripTrailing() + lineSeparator;
-        return wroteEntry && changed ? updatedConfig : normalizedConfig;
-    }
-
-    private static boolean isConfigEntryLine(String trimmedLine, String key) {
-        return trimmedLine.startsWith(key + " ") || trimmedLine.startsWith(key + "=");
-    }
-
-    private static String configEntryLine(String referenceLine, String key, String value, String defaultIndent) {
-        String indent = referenceLine.replaceFirst("\\S.*$", "");
-        if (indent.isBlank()) {
-            indent = defaultIndent;
-        }
-
-        return indent + key + " = " + value;
+        String result = String.join(separator, updated).stripTrailing() + separator;
+        return wroteEntry && changed ? result : normalized;
     }
 }
